<resources>
    <string name="app_name">Ngelu Ho</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="currency">Rp.</string>
    <string name="future_value">Future Value</string>
    <string name="all_required">All Field is required</string>
    <string name="year_required">Number of Year is required</string>
    <string name="present_value_required">Present Value is required</string>
    <string name="interest_rate_required">Interest Rate is required</string>
    <string name="present_value">Present Value</string>
    <string name="number_of_year">Number of Year</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="count">Count</string>
    <string name="result">Result :</string>
    <string name="change_language_settings">change language settings</string>

    <string-array name="data_title_find">
        <item>Tanah Wiyung, Surabaya luas 435 meter persegi</item>
        <item>Mobil Mercedes Benz S-Class</item>
        <item>Rumah Perum Rungkut Asri 2 Lantai Merr</item>
        <item>Laptop HP Pavilion x360 14-dh0038tx</item>
        <item>Jam Rolex </item>
        <item>PC gaming</item>
    </string-array>

    <string-array name="data_price_find">
        <item>3350000000</item>
        <item>2770000000</item>
        <item>1100000000</item>
        <item>10799000</item>
        <item>4000000000</item>
        <item>50000000</item>
    </string-array>

    <array name="data_photo_find">
        <item>@drawable/tanah</item>
        <item>@drawable/merci</item>
        <item>@drawable/rumah</item>
        <item>@drawable/laptop</item>
        <item>@drawable/rolex</item>
        <item>@drawable/pcgaming</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Enter amount</string>
    <string name="simulation">Simulation</string>
    <string name="total">Total :</string>
    <string name="profit">Profit :</string>
    <string name="find">Find</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="how_we_find_your_profit">How we find your profit ?</string>
    <string name="future_desc">Future value (FV) is the value of a current asset at a future date based on an assumed rate of growth. The future value (FV) is important to investors and financial planners as they use it to estimate how much an investment made today will be worth in the future. Knowing the future value enables investors to make sound investment decisions based on their anticipated needs. However, external economic factors, such as inflation, can adversely affect the future value of the asset by eroding its value.</string>
    <string name="what_formula_we_use">What formula we use ?</string>
    <string name="future_formula">FV = PV * (1 + i)^n</string>
    <string name="future_formula_explain">FV = Future Value  \nPV = Present Value \ni = Interest Rate \nn = n Year</string>
    <string name="how_we_find_your_capital_investment">How we find your capital investment ?</string>
    <string name="present_desc">Present value (PV) is the current value of a future sum of money or stream of cash flows given a specified rate of return. Future cash flows are discounted at the discount rate, and the higher the discount rate, the lower the present value of the future cash flows. Determining the appropriate discount rate is the key to properly valuing future cash flows, whether they be earnings or obligations.</string>
    <string name="present_formula">PV = FV * (1/ (1 + i)^n</string>
    <string name="present_formula_explain">PV = Present Value \nFV = Future Value  \ni = Interest Rate \nn = n Year</string>
    <string name="capital_investment">Capital Investment</string>
    <string name="investment">Investment</string>
    <string name="your_target">Your Target</string>
    <string name="you_can_start_investing_from">You can start investing from</string>
    <string name="_0_year">0 year</string>
</resources>
