<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.PresentCalcFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_target"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <me.abhinay.input.CurrencyEditText
                android:id="@+id/txtPresentValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="0.8"/>
            <Button
                android:id="@+id/btnFindTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find"
                android:textAllCaps="false"
                android:layout_weight="0.2"
                style="@style/ButtonGeneral"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_year"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1">
            </TextView>

            <TextView
                android:id="@+id/tvPercenYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_year"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textAlignment="textEnd">
            </TextView>
        </LinearLayout>

        <SeekBar
            android:id="@+id/sbYear"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_rate"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1">
            </TextView>
            <TextView
                android:id="@+id/tvPercenRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 %"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textAlignment="textEnd">
            </TextView>
        </LinearLayout>

        <SeekBar
            android:id="@+id/sbRate"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
        <Button
            android:id="@+id/btnHitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textAllCaps="false"
            style="@style/ButtonGeneral">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/square_red_background"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_can_start_investing_from"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tvHasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Rp. - "
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white">

        </TextView>

    </LinearLayout>

</LinearLayout>